player can shoot things

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,9 +2,13 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>WDI Project 1</title>
+    <title>Space Invaders Survival</title>
+    <link rel="stylesheet" href="/Users/cankalsin/development/PROJECTS/project-01/starter-code/styles/main.css">
+    <script src="/Users/cankalsin/development/PROJECTS/project-01/starter-code/scripts/app.js"></script>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>Space Invaders</h1>
+    <div class="grid">
+    </div>
   </body>
 </html>
